fixed box shadow on navbar and alignment of login page (#79)
* fixed box shadow on navbar and alignment of login page

* cleaned up styles on creator page

--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -2,7 +2,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    box-shadow: 0 4px 2px -2px rgba(210, 210, 210, .6);
+    box-shadow: 0 3px 2px -2px rgba(114, 114, 114, 0.3);
     background: white;
     width: 100%;
     height: 60px;
